networking-for-ai-inference/k8s/models/llama-3-8b/route.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-route
spec:
  parentRefs:
    - name: unified-inference-gateway
      namespace: inference-gateway
      sectionName: https
  hostnames:
    - "gateway.internal.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /models/llama/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: llama-3-8b-pool
          group: inference.networking.k8s.io
          kind: InferencePool
